# urihandler

./: CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  db  goal.yaml  package-lock.json  package.json  planfile.yaml  requirements.txt
adapters/python/: CHANGELOG.md  README.md  pyproject.toml
adapters/python/.urirun/: discovered-registry.json
adapters/python/tests/: test_agent_command.py  test_artifacts.py  test_capability_doctor.py  test_chat_artifacts.py  test_chat_env_selection_client.py  test_chat_node_default.py  test_chat_screen_capability_client.py  test_cli_parser.py  test_collect_attachments_contract.py  test_compat.py  test_connect_catalog.py  test_contract_export.py  test_contracts.py  test_core_import_smoke.py  test_dashboard_chat_config.py  test_dashboard_js.py  test_diagnostics.py  test_dispatch_protocol.py  test_distribution_name_collision.py  test_doctor.py  test_episode_capture.py  test_errors.py  test_examples_router_diagnosis.py  test_exec.py  test_flow.py  test_flow_reversible.py  test_flow_rollup.py  test_flow_scheme.py  test_flow_twin.py  test_gap5_authoring.py  test_host_dashboard.py  test_host_routing.py  test_kernel_adoption.py  test_mesh.py  test_minimal_imports.py  test_node_client.py  test_node_extractable.py  test_node_health.py  test_node_util.py  test_orchestrator_helpers.py  (+20 more)
adapters/python/urihandler/: _registry.py  v7.py  v8.py  v8_mcp.py  v8_service.py
adapters/python/urirun/: __init__.py  _registry.py  _runtime.py  _scan.py  compat.py  connect_catalog.py  connector_scaffold.py  connector_sdk.py  exec.py  (+12 more)
(+396 files in other folders)
